--- a/site acessível/index.html
+++ b/site acessível/index.html
@@ -5,36 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Abelhas</title>
+    <title>CRISTIANO RONALDO</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class=" p-5">
 
-        <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/abelhas.png" class="nav-img " loading="lazy">
+        <nav class="container d-flex justify-content-between align-items-center" >
+            <img src="" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
-
-            <div id="acessibilidade" class="menu-acessibilidade">
-                <button id="botao-acessibilidade" class="btn btn-primary rotacao-botao fw-bold">Acessibilidade</button>
-                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista ">
-                    <button id="aumentar-fonte" class="btn btn-primary fw-bold">A +</button>
-
-                    <button id="diminuir-fonte" class="btn btn-primary fw-bold">A -</button>
-
+            <div id="acessibilidade" class="menu-acessibilidade"> 
+                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
+                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
+                    <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="Aumentar o tamanho da fonte">A+</button>
+                    <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir o tamanho da fonte">A-</button>
+                    <button id="alterna-contraste" class="btn btn-primary fw-bold" aria-label="Alterna o contraste de cores"> <i class="bi bi-shadows"></i></button>         
                 </div>
             </div>
-
         </nav>
-
+       
     </header>
 
 
@@ -43,56 +39,59 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/abelha 2.png" class="mb-3" width="563" height="278" loading="lazy">
-                    <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
+                    <h1 class="display-4 text-white fst-italic fw-bold">Conheça a lenda</h1>
+                    <img src="img/cr7 7.png" class="mb-3" width="563"
+                        height="278" loading="lazy">
+                    <a href="#Pele"
+                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src=""
-                    alt="A imagem apresenta uma abelha realizando o processo de polinização, responsável pela reprodução das flores"
-                    title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
-            </div>
+              </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
+        <section id="Pele" class="my-5 pt-6 secao-Pele" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
-                <div class="col-4 d-flex justify-content-center">
-                    <img src="img/abelha 3.png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
+                <div class="col-4 d-flex justify-content-center ">
+                    <img src="img/cr7 3.png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>Importância das abelhas</h2>
-                    <p class="p-2">As abelhas são essenciais para a vida no planeta. Elas polinizam cerca de 70% dos alimentos que consumimos, como frutas, legumes e grãos. Sem as abelhas, a produção de alimentos cairia drasticamente, afetando a biodiversidade e a segurança alimentar. Além disso, elas contribuem para o equilíbrio dos ecossistemas, ajudando na reprodução de plantas e flores. Proteger as abelhas é proteger o futuro da natureza e da humanidade. Fonte: Brasil Escola
-</p>
-                </div>
+                    <h2>Quem é Cristiano Ronaldo?</h2>
+                    <p class="p-2">Cristiano Ronaldo é um dos maiores jogadores de futebol de todos os tempos. Nascido em 5 de fevereiro de 1985, em Funchal, Madeira, Portugal, ele é filho de José Dinis Aveiro e Maria Dolores dos Santos Aveiro. Ronaldo começou sua carreira no Sporting Clube de Portugal e rapidamente se destacou como um jogador talentoso e determinado.</p>
+                       
+                      <p>  Tem como principais feitos - 5 Liga dos Campeões da UEFA
+- 1 Campeonato Europeu de Futebol (Euro)
+- 5 Bolas de Ouro da FIFA, além de ter conseguido o feito de ser o maior artilheiro da história do futebol em gols oficiais. </p>
+               <p>Marcou era em gigantes do futebol mundial, como Manchester United, Real Madrid e Juventus.</p>
+</div>
             </div>
         </section>
 
-        <section id="galeria">
+        <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
             <h2 class="text-center pt-5">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/abelha 4.png"
+                        <img src="img/cr7.png"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/abelha 5.png" class="img-fluid rounded-5"
+                        <img src="img/cr7 2.png" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/abelha 6.png" class="img-fluid rounded-5"
-                            loading="lazy">
+                        <img src="img/cr7 6.png" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/abelha 7.png"
+                        <img src="img/cr7 5.png"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
-            </div>
+             </div>
         </section>
 
         <section id="contato">
@@ -129,11 +128,11 @@
         <i class="bi bi-whatsapp"></i>
         <i class="bi bi-instagram"></i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
+        <p class="mt-3">Desenvolvido por Eduardo</p>
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
-
+  
 </body>
 
 </html>
